@@ -1,3 +1,8 @@
+17/6/15
+  Fix for transient child window not being placed on
+   desktop with parent if other desktop is focused
+  Fix for occasional crash 'cause don't xfree after return!
+
 30/5/15
   Added useless gaps to the three tiling modes
 
